# gtest-demo

./: CMakeLists.txt  test_write.py  testfile.txt
DiffTest/: HTML.py  diff.html  filediff.py
mutants/: CMakeLists.txt
mutants/ArithmeticMultToDiv/: CMakeLists.txt
mutants/ArithmeticMultToDiv/src/: CMakeLists.txt  example_ArithmeticMultToDiv.cpp
mutants/ArithmeticMultToDiv/test/: CMakeLists.txt  example_add_ArithmeticMultToDiv.cpp  example_subtract_ArithmeticMultToDiv.cpp
mutants/ArithmeticPlusToMinus/src/: CMakeLists.txt  example_ArithmeticPlusToMinus.cpp
mutants/ArithmeticPlusToMinus/test/: CMakeLists.txt  example_add_ArithmeticPlusToMinus.cpp  example_subtract_ArithmeticPlusToMinus.cpp
mutator/: Arithmetic_Operator1.py  GenerateMutants.py  MutatorClass.py  config.ini  getfilename.py  mutant_dictionary.py
src/: example.cpp  example.h
test/: CMakeLists.txt  example_and.cpp  example_bitwiseand.cpp  example_bitwiseor.cpp  example_booleanfalse.cpp  example_booleantrue.cpp  example_decrement.cpp  example_divideEquals.cpp  example_equality.cpp  example_greaterthan.cpp  example_greaterthanequals.cpp  example_iterate.cpp  example_lessthan.cpp  example_lessthanequals.cpp  example_multiEquals.cpp  example_notequals.cpp  example_or.cpp
